# sampled-knowledge-distillation

./: .gitignore  .pip-constraints.txt  CONTRIBUTING.md  EVALUATION_RESULTS_GUIDE.md  EVAL_REGISTRY_CHANGES.md  README.md  RUNS_REGISTRY.md  SLURM_GUIDE.md  ablate.slurm  ekd_distill.py  eval.slurm  evals.slurm  kd_sweep.sh  pyproject.toml  requirements.txt  run_distillation.py  run_train.sh  setup.slurm  submit_eval.sh  train.slurm
.run/: python ekd_distill.py.run.xml
Qwen/Qwen3-0.6B/: eval_light_model_13877_20251001_1917_top_k_tok_k30_20251001_224637.json  eval_light_model_13877_20251001_1917_top_k_tok_k30_20251001_231558.json
ekd/: __init__.py  config.py  run_registry.py  utils.py
ekd/data/: __init__.py  cache.py  dataset.py
ekd/evaluations/: benchmark_tasks.yaml  eval.py  loader.py  utils.py
ekd/logging/: __init__.py  wandb_utils.py
ekd/models/: __init__.py  ekd_distill.py  loader.py  ollama_loader.py
ekd/training/: __init__.py  distiller.py  entropy_utils.py  linucb.py  linucb_controller.py  offline_cache.py
graphs/: eval_summary.py  fig_pareto_acc_vs_ppl.pgf  kd_intuition.pgf  kl_div_savings.py  matrix.py  results_graph.py  rskd_grid.pgf  rskd_grid.py  rskd_grid_two_axis.pgf  rskd_grid_two_axis.py  rskd_grid_two_axis_with_axes.pgf  rskd_legend.pgf  rskd_legend.py
sampledkd/: __init__.py  config.py  run_registry.py
sampledkd/data/: cache.py  dataset.py
sampledkd/distill/: __init__.py  atkd.py  ce_estimators.py  kd_temperature_schedule.py  oom_setup_helper.py  teacher_forward_helpers.py  trainer.py
sampledkd/distill/_mixins/: amp_oom.py  bandit.py  cache.py  checkpoint.py  entropy.py  (+4 more)
sampledkd/evaluations/: benchmark_tasks.yaml  eval.py  fsdp_patch.py  lm_eval_entry.py  utils.py
sampledkd/logging/: wandb_utils.py
sampledkd/models/: loader.py
sampledkd/training/: distiller.py  distributed.py  entropy_utils.py  entrypoint_utils.py  linucb.py  linucb_controller.py  offline_cache.py
scripts/: check_datasets_avg_length.py
shell_scripts/: shell_kd_sweep.sh  shell_requirements.txt  shell_train_onegpu.sh
sweeps/: sweep_anneal_compare_methods.yaml  sweep_compare_k.yaml  sweep_compare_methods.yaml
tests/: test_ce_elimination_estimator.py  test_trainer_invalid_targets.py
tools/: ablate_entropy_topk_agreement.py  check_datasets_avg_length.py  runs_autopilot.py  show_qwen_vocab_size.py
written/: custom.bib  nlp_paper.aux  nlp_paper.bbl  nlp_paper.blg  nlp_paper.tex
