[project]
name = "ekd"
version = "0.1.0"
description = "Entropy-guided Knowledge-Distillation (EKD) for LLM reasoning"
authors = [
    {name = "Almog Tavor", email = "almogt@mail.tau.ac.il"},
    {name = "Neil Cnaan", email = "neilcnaan@mail.tau.ac.il"},
    {name = "Itay Ebenspanger", email = "ebenspanger@mail.tau.ac.il"},
]
dependencies = [
    "torch>=2.2",
    "transformers>=4.50.0",
    "datasets",
    "accelerate",
    "bitsandbytes",
    "sentencepiece",
    "rich",
    "tiktoken",
    "ollama>=0.5.1",
    "qwen>=0.1.1",
    "pydantic>=2.11.5",
]
requires-python = ">=3.10"

[project.optional-dependencies]
cpu = [
  "torch>=2.5.1",
]
cu118 = [
  "torch>=2.5.1",
]
cu121 = [
  "torch>=2.5.1",
]
cu124 = [
  "torch>=2.5.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu118" },
    { extra = "cu121" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ekd"] 
